--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,6 +2,6 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     padding-left: 10px;
 }
