--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-<header>
-  <h2>@Energy Reflux</h2>
-  <p>Made by Nivas with ❤️</p>
-</header>
+<div class="container">
+  <p class="title">Energy Reflux - Blog</p>
+  <p class="sub-title">Made with ❤️ by Nivas</p>
+</div>
+<footer>
+  <p class="sub-title">Powered By @Angular</p>
+</footer>
