--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,23 @@
-header {
+
+.container{
     display: flex;
+    justify-content: center;
     align-items: center;
-    justify-content: space-between;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    padding-left: 10px;
+    height: 90%;
+    flex-direction: column;
+}
+
+.title {
+    font-size: 50px;
+    font-family: 'Poor Story', cursive;
+    margin-bottom: 0;
+}
+.sub-title{
+    font-size: 18px;
+    font-family: 'Poor Story', cursive;
+}
+
+footer{
+    float: right;
+    margin-right: 20px;
 }
